really fixes layout bug this time

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -4,6 +4,7 @@
 
       
     .tooltip-wrapper .tooltip {
+        position: absolute;
         width: 200px; /* adjusts width of tooltip content area */
         background-color: #333;
         color: #f8f8f8;
